--- a/assets/stylesheets/issue_tests_tab.css
+++ b/assets/stylesheets/issue_tests_tab.css
@@ -292,7 +292,7 @@ h3 > div.right{float: right;}
 
 .test-case-result.passed {
   color: #f5f2f2;
-  background-color: rgb(131 128 128);
+  background-color: green;
 }
 
 .test-case-result.idle {
